// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeScreen /> renders correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    collapsable={false}
    forwardedRef={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    scrollEventThrottle={16}
  >
    <View>
      <View
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {
              "transform": [
                {
                  "translateY": 0,
                },
                {
                  "scale": 1,
                },
              ],
            },
          }
        }
        style={
          {
            "backgroundColor": "#A1CEDC",
            "height": 100,
            "overflow": "hidden",
            "transform": [
              {
                "translateY": 0,
              },
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "bottom": 0,
              "height": 100,
              "left": 0,
              "position": "absolute",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#fff",
            },
            {
              "flex": 1,
              "gap": 16,
              "overflow": "hidden",
              "padding": 32,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#fff",
              },
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                undefined,
                {
                  "fontSize": 32,
                  "fontWeight": "bold",
                  "lineHeight": 32,
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Products
          </Text>
        </View>
        <RCTScrollView
          data={[]}
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={0.0001}
          stickyHeaderIndices={[]}
          viewabilityConfigCallbackPairs={[]}
        >
          <View />
        </RCTScrollView>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffdc04",
              "borderRadius": 5,
              "marginTop": 40,
              "padding": 10,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Agregar
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<SingleProduct /> renders correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    collapsable={false}
    forwardedRef={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          [
            {
              "backgroundColor": "#fff",
            },
            {
              "marginLeft": 24,
              "marginTop": 6,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#fff",
              },
              {
                "gap": 8,
                "marginBottom": 8,
                "marginRight": 20,
                "marginTop": 20,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                undefined,
                {
                  "fontSize": 32,
                  "fontWeight": "bold",
                  "lineHeight": 32,
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            ID: 
          </Text>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Información extra
          </Text>
          <View
            style={
              [
                {
                  "backgroundColor": "#fff",
                },
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              Nombre
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  undefined,
                  undefined,
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  {
                    "width": 150,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "#fff",
                },
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              Descripción
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  undefined,
                  undefined,
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  {
                    "width": 150,
                  },
                ]
              }
            />
          </View>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Logo
          </Text>
          <View
            style={
              [
                {
                  "backgroundColor": "#fff",
                },
                {
                  "alignItems": "center",
                },
              ]
            }
          >
            <Image
              source={
                {
                  "uri": "",
                }
              }
              style={
                {
                  "height": 105,
                  "marginBottom": 20,
                  "width": "60%",
                }
              }
            />
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "#fff",
                },
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              Fecha Liberación
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  undefined,
                  undefined,
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  {
                    "width": 150,
                  },
                ]
              }
            >
              NaN/NaN/NaN
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "#fff",
                },
                {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              Fecha Revisión
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  undefined,
                  undefined,
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  {
                    "width": 150,
                  },
                ]
              }
            >
              NaN/NaN/NaN
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "#fff",
                },
                {
                  "marginTop": 70,
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "gray",
                  "borderRadius": 5,
                  "marginBottom": 5,
                  "padding": 10,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#11181C",
                    },
                    {
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    {
                      "color": "white",
                    },
                  ]
                }
              >
                Editar
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "red",
                  "borderRadius": 5,
                  "padding": 10,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#11181C",
                    },
                    {
                      "fontSize": 16,
                      "lineHeight": 24,
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    {
                      "color": "white",
                    },
                  ]
                }
              >
                Eliminar
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<UpsertProduct /> renders correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    collapsable={false}
    forwardedRef={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          [
            {
              "backgroundColor": "#fff",
            },
            {
              "marginLeft": 24,
              "marginTop": 6,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#fff",
              },
              {
                "gap": 8,
                "marginBottom": 8,
                "marginRight": 20,
                "marginTop": 20,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                undefined,
                {
                  "fontSize": 32,
                  "fontWeight": "bold",
                  "lineHeight": 32,
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Formulario de registro
          </Text>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#fff",
              },
              {
                "gap": 8,
                "marginBottom": 8,
                "marginRight": 20,
                "marginTop": 20,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            ID
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              {
                "borderColor": "#555",
                "borderRadius": 5,
                "borderWidth": 1,
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            value=""
          />
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Nombre
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              {
                "borderColor": "#555",
                "borderRadius": 5,
                "borderWidth": 1,
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            value=""
          />
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Descripción
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              {
                "borderColor": "#555",
                "borderRadius": 5,
                "borderWidth": 1,
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            value=""
          />
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Logo
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              {
                "borderColor": "#555",
                "borderRadius": 5,
                "borderWidth": 1,
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            value=""
          />
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Fecha Liberación
          </Text>
          <View
            style={
              [
                {
                  "backgroundColor": "#fff",
                },
                {
                  "backgroundColor": "#F2F2F2",
                  "borderColor": "#F2F2F2",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 40,
                  "marginBottom": 10,
                  "padding": 10,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              20/6/2024
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Fecha Revisión
          </Text>
          <View
            style={
              [
                {
                  "backgroundColor": "#fff",
                },
                {
                  "backgroundColor": "#F2F2F2",
                  "borderColor": "#F2F2F2",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 40,
                  "marginBottom": 10,
                  "padding": 10,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              20/6/2025
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffdc04",
                "borderRadius": 5,
                "marginTop": 40,
                "padding": 10,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              Agregar
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#DDD",
                "borderRadius": 5,
                "padding": 10,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#11181C",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              Reiniciar
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
